adding comments and categories
