# server.js
@@ -7,6 +7,8 @@ import { readFile } from 'fs/promises';
 import cors from 'cors';
 import routeUser from './routes/routesUser.js';
 import routeRecipe from './routes/routesRecipes.js';
+import routeCategories from './routes/routesCategories.js';
+import routeComments from './routes/routesComments.js';
 
 const swaggerDocument = JSON.parse(
 	await readFile(new URL('./swagger.json', import.meta.url)),
@@ -21,8 +23,8 @@ app.use(cors());
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use('/users', routeUser);
 app.use('/recipes', routeRecipe);
-// app.use('/categories');
-// app.use('/comments');
+app.use('/categories', routeCategories);
+app.use('/comments', routeComments);
 
 try {
 	const PORT = process.env.PORT;
